# bz-taew-py

./: .env  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  configuration.py  pyproject.toml
.claude/commands/: issue-close.md  issue-new.md
adapters/cli/: __init__.py  buy_ticket.py  check_car.py  get_rates.py
adapters/ram/: for_making_payments.py  for_storing_rates.py  for_storing_tickets.py
benchmarks/: __init__.py  benchmark_tickets_storage.py  fake_tickets.py
common/: Makefile  README.md
common/docs/: README.md
common/scripts/: install.sh  plantuml.sh  pull.sh  push.sh  update.sh
docs/: README.md  glossary.md  installation.md
docs/adrs/: README.md  adr-000-use-adrs-to-document-all-architecturally-significant-decisions.md  adr-002-apply-ports-and-adapters-pattern.md  adr-003-use-separate-repositories-with-git-subtree.md  adr-004-use-gherkin-for-acceptance-test-specifications.md  adr-005-bluezone-application-ports.md  adr-006-support-strong-type-checking-without-inforcing-it.md  adr-007-postpone-formal-templates-for-adrs-and-feature-tests.md  adr-008-use-world-tags-in-feature-tests.md  adr-py-000-use-python-as-implementation-language.md  adr-py-001-use-mono-repository.md  (+1 more)
docs/features/: BuyTicket.feature.md
domain/: payment_card.py  rate.py  ticket.py
ports/: for_car_drivers.py  for_making_payments.py  for_parking_inspectors.py  for_storing_rates.py  for_storing_tickets.py
scripts/: ask-all.sh  build-all.sh  install.sh  issue-close.sh  new-taew-adapter.sh  push.sh  upgrade.sh
test/: test_cli.py
workflows/: _common.py
(+41 files in other folders)
